fixed toggle button and menu overlapping

--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     background-color: var(--purple-theme-nav-background-color);
     height: 80px;
     display: flex;
@@ -6,8 +6,10 @@
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
+    top: 0;
+    z-index: 10;
 
-    &__container{
+    &__container {
         display: flex;
         align-items: center;
         width: 100%;
@@ -15,22 +17,22 @@
         padding: 0px 20px;
         flex: 1;
 
-        &__logo{
+        &__logo {
             color: var(--purple-theme-main-color);
             cursor: pointer;
         }
 
-        &__menu{
+        &__menu {
             display: flex;
             list-style: none;
             text-align: center;
 
-            &__item{
+            &__item {
                 line-height: 40px;
                 margin-right: 1.5rem;
                 font-size: 1.6rem;
 
-                &::after{
+                &::after {
                     content: '';
                     display: block;
                     height: 3px;
@@ -39,13 +41,12 @@
                     transition: all 0.5s ease;
                 }
 
-                &:hover::after{
+                &:hover::after {
                     width: 100%;
                     background: var(--purple-theme-main-color);
-
                 }
 
-                &__links{
+                &__links {
                     color: var(--purple-theme-main-color);
                     text-decoration: none;
                     padding: 0.5rem;
@@ -55,12 +56,12 @@
     }
 }
 
-.nav-icon{
+.nav-icon {
     display: none;
 }
 
-@media only screen and (max-width : 768px){
-    .navbar__container__menu{
+@media only screen and (max-width: 768px) {
+    .navbar__container__menu {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -70,24 +71,22 @@
         left: -110%;
         opacity: 1;
         transition: all 0.5s ease;
-    
-        &.active{
-            background: var(--purple-theme-nav-background-color);
+        background: var(--purple-theme-nav-background-color);
+        z-index: 1000;
+
+        &.active {
             left: 0;
             opacity: 1;
-            z-index: 0;
         }
 
-        &__item{
+        &__item {
             border-bottom: 1px solid #282828;
             margin: 0;
             padding: 20px 0px;
-            
-        
         }
     }
 
-    .nav-icon{
+    .nav-icon {
         display: block;
         cursor: pointer;
         color: var(--purple-theme-main-color);
